[Fix]エラーメッセージ表示のpaddingを広くとる/text-align centerの解除

--- a/app/assets/stylesheets/alert.scss
+++ b/app/assets/stylesheets/alert.scss
@@ -3,5 +3,5 @@
   border-radius: 0.25rem;
   background: #FAB1AF;
   border: 2px solid #B1221A;
-  padding: 12px;
+  padding: 12px 12px 12px 50px;
 }
